      Windows) and \code{mustWork} to control the action if a canonical
      path cannot be found.

      \item The previously almost undocumented limit of 256 bytes on a
      symbol name has been raised to 10,000 bytes (a sanity check).
      Long symbol names can sometimes occur when deparsing expressions
      (for example, in \code{model.frame}).
    }
  }
  
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.
    }
  }
  
  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD Rdiff} is now implemented in \R on
      Unix-alikes (as it has been on Windows since \R 2.12.0).

      \item \command{R CMD build} no longer does any cleaning in the
      supplied package directory: all the cleaning is done in the copy.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item \command{make check} will now fail if there are differences
      from the reference output when testing package examples and if
      environment variable \env{R_STRICT_PACKAGE_CHECK} is set to a true
      value.
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Dummy
    }
  }
}

\section{CHANGES IN R VERSION 2.12.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{    
      \item The DVI/PDF reference manual now includes the help page for
      all the standard packages: \pkg{splines}, \pkg{stats4} and
      \pkg{tcltk} were previously omitted.
    }
  }
  